--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
   </div>
 
   <div id="buttons">
-    <div style="text-align: center; font-weight: bold; font-family: sans-serif; margin-bottom: 5px; color: white;">
+    <div style="text-align: center; font-weight: bold; font-family: sans-serif; margin-bottom: 5px; color: white; font-size: 25px;">
       Boshqa logo tanlash:
     </div>
-    <div style="display: flex; justify-content: center;">
-      <img src="logos/logo.png" alt="Default" onclick="switchLogo('logo.png')" style="cursor:pointer; height: 50px; margin: 0 10px;">
-      <img src="logos/logo-white.png" alt="White" onclick="switchLogo('logo-white.png', true)" style="cursor:pointer; height: 50px; margin: 0 10px;">
-      <img src="logos/logo-red.png" alt="Red" onclick="switchLogo('logo-red.png', true)" style="cursor:pointer; height: 50px; margin: 0 10px;">
+    <div style="display: flex; flex-direction: column; justify-content: center;">
+      <img src="logos/logo.png" alt="Default" onclick="switchLogo('logo.png')" style="cursor:pointer; height: 150px; margin: 0 10px;">
+      <img src="logos/logo-white.png" alt="White" onclick="switchLogo('logo-white.png', true)" style="cursor:pointer; height: 150px; margin: 0 10px;">
+      <img src="logos/logo-red.png" alt="Red" onclick="switchLogo('logo-red.png', true)" style="cursor:pointer; height: 150px; margin: 0 10px;">
     </div>
   </div>
 
